--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A simple react app and webpack boilerplate",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --progress --config ./config/webpack.dev.js",
-    "build": "webpack --config ./config/webpack.prod.js",
+    "tailwind:css": "tailwind build src/assets/tailwind.css -c  tailwind.js -o src/assets/tailwind.dist.css",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress --config ./config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Herisson Silva",
@@ -14,10 +15,22 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.2.0",
     "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.4",
+    "postcss": "^7.0.5",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "tailwindcss": "^0.6.6",
+    "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
@@ -25,6 +38,7 @@
   },
   "dependencies": {
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1"
   }
 }
